pain field renamed to Score and hacked to compute a sum of the first character in each custom field for an issue.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,4 @@
 en:
-  user_pain: User Pain
-  label_user_pain: User Pain
-  field_user_pain: User Pain
+  user_pain: Score
+  label_user_pain: Score
+  field_user_pain: Score
